--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"nearley": "^2.20.1"
 	},
 	"devDependencies": {
-		"@types/bun": "^1.2.8"
+		"@types/bun": "^1.2.8",
+		"@types/nearley": "^2.11.5"
 	}
 }
