--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
 	"type": "module",
 	"scripts": {
-		"codegen": "bun run ./scripts/grammar-preprocessor.js grammar.ne grammar-processed.ne && nearleyc grammar-processed.ne -o grammar.ts"
+		"codegen": "bun run ./scripts/grammar-preprocessor.js grammar.ne grammar-processed.ne && nearleyc grammar-processed.ne -o grammar.ts",
+		"format": "prettier --write --cache ."
 	},
 	"dependencies": {
 		"nearley": "^2.20.1"
 	},
 	"devDependencies": {
 		"@types/bun": "^1.2.8",
-		"@types/nearley": "^2.11.5"
+		"@types/nearley": "^2.11.5",
+		"prettier": "^3.5.3"
 	}
 }
